[workspace]
resolver = "3"
members = [ "next_permutation",
  "three_sum",
  "three_sum_closest",
  "next_permutation"
, "valid_parentheses", "longest_substring_without_repeating_character", "powx_n", "n_queens", "container_with_most_water", "type_of_triangle", "longest_palindromic_substring", "minimum_path_sum", "unique_path"]
