[workspace]
resolver = "3"
members = [ "next_permutation",
  "three_sum",
  "three_sum_closest",
  "next_permutation"
, "valid_parentheses", "longest_substring_without_repeating_character", "powx_n", "n_queens", "container_with_most_water", "type_of_triangle", "longest_palindromic_substring", "minimum_path_sum", "unique_path", "cherry-pickup", "find-the-city-with-the-smallest-number-of-neighbors-at-a-threshold-distance", "dungeon-game", "add-two-numbers", "maximum-difference-between-even-and-odd-frequency-i", "number-of-beautiful-partitions", "best-time-to-buy-and-sell-stock-iv"]
